--- a/hhq/index.html
+++ b/hhq/index.html
@@ -22,6 +22,7 @@
             font-family: 'OPTIAthenaeum', serif;
             font-size: 1.5rem;
             line-height: 1.8;
+            margin-top: 10px;
             margin-bottom: 20px;
             margin-left: 30px;  /* Increased margin for better visibility */
             margin-right: 30px;
