--- a/hhq/index.html
+++ b/hhq/index.html
@@ -17,24 +17,76 @@
             font-weight: normal;
             font-style: normal;
         }
-        /* Style for the Novalis quote with Athenaeum font */
+
+        body {
+            background-color: black;
+            color: white;
+            font-family: 'AlteHaasGrotesk', sans-serif;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            text-align: center;
+            overflow: hidden; /* Prevent scrolling on the main page */
+        }
+
+        #endContainer {
+            padding: 20px;
+            overflow-y: auto; /* Enable scrolling within the endContainer */
+            max-height: 100vh; /* Ensure it doesn't exceed the viewport height */
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start; /* Start content at the top */
+        }
+
+        .quote {
+            font-family: 'OPTIAthenaeum', serif;
+            font-size: 1.5rem;
+            line-height: 1.8;
+            margin: 10px 30px 20px;
+        }
+
+        .author {
+            font-family: 'OPTIAthenaeum', serif;
+            font-size: 1.5rem;
+            line-height: 1.2;
+            margin: 0 30px 40px;
+        }
+
+        .paragraph {
+            font-family: 'AlteHaasGrotesk', sans-serif;
+            font-size: 1.2rem;
+            line-height: 1.6;
+            margin: 20px 30px 40px;
+            text-align: justify;
+        }
+
+        .title {
+            font-family: 'AlteHaasGrotesk', sans-serif;
+            font-size: 1.8rem;
+            line-height: 1.2;
+            margin: 40px 30px 20px;
+        }
+
+        /*
         .quote {
             font-family: 'OPTIAthenaeum', serif;
             font-size: 1.5rem;
             line-height: 1.8;
             margin-top: 10px;
             margin-bottom: 20px;
-            margin-left: 30px;  /* Increased margin for better visibility */
+            margin-left: 30px;  
             margin-right: 30px;
         }
 
-        /* Style for the Novalis quote with Athenaeum font */
         .author {
             font-family: 'OPTIAthenaeum', serif;
             font-size: 1.5rem;
             line-height: 1.2;
             margin-bottom: 40px;
-            margin-left: 30px;  /* Increased margin for better visibility */
+            margin-left: 30px;  
             margin-right: 30px;
         }
 
@@ -44,19 +96,18 @@
             line-height: 1.6;
             margin-top: 20px;
             margin-bottom: 40px;
-            margin-left: 30px;  /* Increased margin for better visibility */
+            margin-left: 30px;  
             margin-right: 30px;
             text-align: justify;
         }
 
-        /* Style for the Novalis quote with Athenaeum font */
         .title {
             font-family: 'AlteHaasGrotesk', sans-serif;
             font-size: 1.8rem;
             line-height: 1.2;
             margin-top: 40px;
             margin-bottom: 20px;
-            margin-left: 30px;  /* Increased margin for better visibility */
+            margin-left: 30px;  
             margin-right: 30px;
         }
 
@@ -71,7 +122,7 @@
             justify-content: center;
             height: 100vh;
             text-align: center;
-        }
+        }*/
 
         h1, h2, p {
             margin: 0 0 20px;
